ghc-4335c07/testsuite/tests/warnings/should_fail/WerrorFail.hs
{-# OPTIONS_GHC -Wmissing-signatures -Werror=incomplete-patterns #-}
module WerrorFail where

-- this should generate incomplete-patterns warning
foo :: Maybe a -> ()
foo Nothing = ()
