ghc-4335c07/testsuite/tests/warnings/should_fail/WerrorFail.stderr

WerrorFail.hs:6:1: error: [-Wincomplete-patterns (in -Wextra), -Werror=incomplete-patterns]
    Pattern match(es) are non-exhaustive
    In an equation for ‘foo’: Patterns not matched: (Just _)
